# pyproject_aliases

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json  renovate.json
.github/workflows/: publish.yml  release-please.yml  reusable-test.yml  test.yml
src/pyproject_aliases/: main.py
tests/: test_main.py
